crates/swc_css_parser/tests/recovery/value/number/plus-dot/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/number/plus-dot/input.css:1:14
  |
1 | a { width: +0.; }
  |              ^

